# Vectormate

./: .gitignore  BUILD_INSTRUCTIONS.md  CMAKE_BUILD.md  CMAKE_BUILD_GUIDE.md  CMakeLists.txt  Makefile  README.md  WASM_INTEGRATION.md  build-cmake.ps1  build-wasm.ps1  build.bat  build.ps1  build.sh  package-lock.json  package.json  tailwind.config.ts  thinking.md
.idx/: dev.nix
cpp/: README.md  canvas.cpp  legacy.cpp  main.cpp  rectangle.cpp  shape.cpp  simple.cpp  states.cpp  test.cpp  utils.cpp
cpp/includes/: canvas.h  rectangle.h  shape.h  states.h  utils.h
docs/: blueprint.md
public/: simple-test.html  simple.js  simple.wasm  test-wasm.html  vectormate copy.wasm  vectormate.js  vectormate.wasm
src/app/: globals.css  layout.tsx  page.tsx
src/components/: debug-panel.tsx  icons.tsx  vectormate-editor.tsx
src/components/canvas/: settings-panel.tsx  workspace.tsx
src/components/layout/: bottom-bar.tsx  left-sidebar.tsx  right-sidebar.tsx  tool-dock.tsx  top-toolbar.tsx
src/components/ui/: color-picker.tsx
src/cpp/: canvas.cpp  main.cpp
src/cpp/includes/: canvas.h
src/lib/: utils.ts  wasm-bridge.ts
src/states/: canvasStates.ts
states/: canvasStates.ts
